# r_e_c_u_r

./: CLAUDE.md  Cargo.toml  README.md  build.rs  config.toml  keymap.toml  rust-toolchain.toml
.claude/agent-memory/: code-reviewer.mem
.docs/: COMPLETED.md  ROADMAP-SPECS.md  ROADMAP.md
.github/workflows/: ci.yml
.liste/: .state.yaml  EPIC-001.md  IDEA-001.md  IDEA-002.md  IDEA-003.md  IDEA-004.md  TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  config.yaml
docs/: ARCHITECTURE.md  USAGE.md
docs/superpowers/plans/: 2026-05-12-render-backend.md  2026-05-16-conjur-sub-plan-b.md  2026-05-16-conjur-sub-plan-c.md
shaders/: _prelude_100.glsl  _prelude_310.glsl  passthrough.toml  quad_100.vert  quad_310.vert
src/: action.rs  apply.rs  config.rs  error.rs  lib.rs  main.rs  persist.rs  state.rs
src/capture/: device.rs  mod.rs  recording.rs
src/detour/: budget.rs  mod.rs  ring.rs  settings.rs
src/input/: keymap.rs  mock.rs  winit_src.rs
src/menu/: browser.rs  frames.rs  mod.rs  param.rs  root.rs  sampler.rs  settings.rs  shaders.rs  shdr_bnk.rs
src/render/: desktop.rs  mod.rs  pi.rs  shader.rs  shader_assembly.rs  shader_pipeline.rs  text.rs
src/sample/: browser_walk.rs  context.rs  modes.rs
src/shader/: banks.rs  hot_reload.rs  library.rs  meta.rs  mod.rs  params.rs
src/status/: grid.rs
src/ui/: mod.rs
src/video/: mod.rs  pipeline_factory.rs  player.rs  probe.rs  rack.rs
tests/: integration_capture_serde.rs  integration_codec_probe.rs  integration_detour_ring.rs  integration_gles_profile.rs  integration_hot_reload.rs  integration_record_pipeline.rs  integration_shader_persist.rs  integration_shader_smoke.rs
tests/fixtures/: shader_good.glsl
